--- a/04company/index1.html
+++ b/04company/index1.html
@@ -163,21 +163,32 @@
                 <ul class="slider">
                     <li>
                         <img src="images2/slide1.png" alt="">
-                        <span>강원도</span>
+                        <span><img src="images2/gangwon.png" alt=""></span>
                     </li>
                     <li>
                         <img src="images2/slide2.png" alt="">
-                        <span>high1 Resort</span>
+                        <span><img src="images2/gangneung.png" alt=""></span>
                     </li>
                     <li>
                         <img src="images2/slide3.png" alt="">
-                        <span>춘천시</span>
+                        <span><img src="images2/chunchun.png" alt=""></span>
                     </li>
+                </ul>
+            </div>
+            <div class="sponser">
+                <div class="eng">GANGWON FC SPONSOR</div>
+                 <br><div class="kr">강원FC스폰서를 소개합니다.</div>
+                <ul class="img">
+                    <li><img src="images2/net1 (2).png" alt=""></li>
+                    <li><img src="images2/net1 (3).png" alt=""></li>
+                    <li><img src="images2/net1 (5).png" alt=""></li>
+                    <li><img src="images2/net1 (6).png" alt=""></li>
+                    <li><img src="images2/h1.png" alt=""></li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="sponser"></div>
+    
     <div class="feed"></div>
     <div class="notice"></div>
 </body>
