--- a/04company/index1.html
+++ b/04company/index1.html
@@ -186,10 +186,39 @@
                     <li><img src="images2/h1.png" alt=""></li>
                 </ul>
             </div>
+            <div class="feed">
+                <ul>
+                    <li>
+                        GANGWON FC FEEDS <br>강원FC소식을 확인하세요!
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td><a href="#"><img src="images2/a 1.png" alt="">전체</a></td>
+                                    <td><a href="#"><img src="images2/bd 1.png" alt="">공지사항</a></td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#"><img src="images2/b 1.png" alt="">뉴스</a></td>
+                                    <td><a href="#"><img src="images2/g 1.png" alt="">구단사진</a></td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#"><img src="images2/facebook 2.png" alt="">페이스북</a></td>
+                                    <td><a href="#"><img src="images2/youtube 8.png" alt="">인스타그램</a></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
         </div>
     </div>
     
-    <div class="feed"></div>
+    
     <div class="notice"></div>
 </body>
 </html>
