--- a/04company/index.html
+++ b/04company/index.html
@@ -112,7 +112,7 @@
             <h4>비전</h4>
             <p>vision 2022</p>
             <ul class="vision clearfix">
-                <li onclick="location.href='http://www.naver.com'">
+                <li onclick="location.href='http:'//www.naver.com'">
                     <div class="card">
                         <img src="images/banner_icon01_01.png" alt="">
                         <div class="card_body">
