--- a/04company/index1.html
+++ b/04company/index1.html
@@ -182,6 +182,7 @@
             </div>
         </div>
     </div>
+    <div class="sponserWrap">
             <div class="sponser">
                 <div class="eng">GANGWON FC SPONSOR</div>
                  <br><div class="kr">강원FC스폰서를 소개합니다.</div>
@@ -193,6 +194,8 @@
                     <li><img src="images2/h1.png" alt=""></li>
                 </ul>
             </div>
+        </div>
+        <div class="feedWrap">
             <div class="feed">
                 <ul class="clearfix">
                     <li>
@@ -259,6 +262,31 @@
                 </ul>
                 
             </div>
-            <div class="notice">공지사항</div>
+        </div>
+        <div class="noticeWrap">
+            <h2>공지사항</h2></div>    
+            <div class="notice">
+                <ul class="clearfix">
+                    <li><a href="#">
+                        <img src="images2/notice1.png" alt="">
+                    </a></li>
+                    <li><a href="#">
+                        <img src="images2/notice2.png" alt="">
+                    </a></li>
+                    <li><a href="#">
+                        <div class="txt">
+                        <h3>PLAYER RANKING</h3>
+                        <h3>선수별 랭킹</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images2/player (1).png" alt="">
+                        <h1>5 GOAL</h1><br>
+                        <p>득점 1위 고무열</p>
+                    </div>
+                    </a></li>
+                    <li><a href="#"></a></li>
+                </ul>
+            </div>
+        
 </body>
 </html>
