--- a/04company/index1.html
+++ b/04company/index1.html
@@ -264,7 +264,8 @@
             </div>
         </div>
         <div class="noticeWrap">
-            <h2>공지사항</h2></div>    
+            <h2>공지사항</h2>
+        </div>    
             <div class="notice">
                 <ul class="clearfix">
                     <li><a href="#">
@@ -278,13 +279,32 @@
                         <h3>PLAYER RANKING</h3>
                         <h3>선수별 랭킹</h3>
                     </div>
-                    <div class="player">
+                    <div class="player clearfix">
                         <img src="images2/player (1).png" alt="">
                         <h1>5 GOAL</h1><br>
                         <p>득점 1위 고무열</p>
                     </div>
+                    <div class="player1">
+                        <img src="images2/player (2).png" alt="">
+                        <h1>3 ASSIST</h1>
+                        <p>도움 1위 고무열</p>
+                    </div>
                     </a></li>
-                    <li><a href="#"></a></li>
+                    <li><a href="#">
+                        <div class="txt">
+                            <h3>GANGWON FC NOTICE</h3><br>
+                            <h3>공지사항</h3>
+                        </div>
+                        <ul class="list">
+                                <li>
+                                    <p>강원FC 엠블럼 공모전 안내</p><br>
+                                    <p>2021-08-30</p>
+                                    </li>
+                                <li>코로나19 확진에 따른 경기 일정 관련 안내</li>
+                                <li>강원FC 선수단 코로나19 확진 관련 공지...</li>
+                                <li>제1회 강원FC배 동호인 축구대회 안내</li>
+                            </ul>
+                    </a></li>
                 </ul>
             </div>
         
