--- a/04company/d/04company/index.html
+++ b/04company/d/04company/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>company</title>
+    <script src="../../js/jquery-3.1.1.min.js"></script>
+    <script src="../../js/jquery.bxslider.js"></script>
+    <script src="../../js/script3.js"></script>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style2.css">
 </head>
@@ -73,9 +76,12 @@
         </div>
        </div>
    </header> 
-   <div class="visual">
-       <img src="../images/visual.png" alt="">
-       <h1><b>GREAT UNION</b></h1>
+   <div class="visualWrap">
+       <ul class="visual">
+       <li><img src="../images/visual.png" alt=""><h1><b>GREAT UNION</b></h1></li>
+       <li><img src="../images/visual01.png" alt=""><h1><b>강원FC</b></h1></li>
+       <li><img src="../images/visual02.png" alt=""><h1><b>2021K-LEAGUE</b></h1></li>
+    </ul>
     </div>
    <div class="mainContain">
        <ul class="box clearfix">
