--- a/04company/d/04company/index.html
+++ b/04company/d/04company/index.html
@@ -85,11 +85,63 @@
     </div>
    <div class="mainContain">
        <ul class="box clearfix">
-           <li><a href="#">1</a></li>
-           <li><a href="#">2</a></li>
-           <li><a href="#">3</a></li>
+           <li><a href="#">
+            <div class="match">
+                <span>NEXT <b>HOME MATCH</b></span>
+                <div class="vs clearfix">
+                <img src="../images/vs1.png" alt="">
+                <span><b>VS</b></span>
+                <img src="../images/vs2.png" alt="">
+            </div>
+            <div class="area">
+                <p>강원</p>
+                <p>포항</p>
+            </div>
+            <p><b>09월 18일(토) 19:00<br>강릉</b></p>
+            </div>
+           </a></li>
+           <li><a href="#">
+               
+           </a></li>
+           <li><a href="#">
+               <div class="quick">
+                   <span>QUICK LINK</span>
+                   <ul class="quicktab">
+                       <li><a href="#">
+                           <img src="../images/money.png" alt="">
+                           <span>티켓</span>
+                       </a></li>
+                       <li><a href="#">
+                           <img src="../images/directions_bus.png" alt="">
+                           <span>버스</span>
+                       </a></li>
+                       <li><a href="#">
+                           <img src="../images/thumb_up.png" alt="">
+                           <span>스폰서</span>
+                       </a></li>
+                       <li><a href="#">
+                           <img src="../images/vs1.png" alt="">
+                       </a></li>
+                       <li><a href="#">
+                           <img src="../images/shopping_cart.png" alt="">
+                           <span>쇼핑몰</span>
+                       </a></li>
+                       <li><a href="#">
+                           <img src="../images/sim_card.png" alt="">
+                           <span>주주</span>
+                       </a></li>
+                       <li><a href="#">
+                           <img src="../images/public.png" alt="">
+                           <span>사회공헌</span>
+                       </a></li>
+                       <li><a href="#">
+                           <img src="../images/w.PNG" alt="">
+                       </a></li>
+                   </ul>
+               </div>
+           </a></li>
            <li><a href="#">4</a></li>
-           <li><a href="#">5</a></li>
+           <li><a href="#">5</a></li> 
            <li><a href="#">6</a></li>
        </ul>
    </div>
