--- a/04company/d/04company/index.html
+++ b/04company/d/04company/index.html
@@ -101,47 +101,71 @@
             </div>
            </a></li>
            <li><a href="#">
-               
+            <div class="quick">
+                <span>QUICK LINK</span>
+                <ul class="quicktab">
+                    <li><a href="#">
+                        <img src="../images/money.png" alt="">
+                        <span>티켓</span>
+                    </a></li>
+                    <li><a href="#">
+                        <img src="../images/directions_bus.png" alt="">
+                        <span>버스</span>
+                    </a></li>
+                    <li><a href="#">
+                        <img src="../images/thumb_up.png" alt="">
+                        <span>스폰서</span>
+                    </a></li>
+                    <li class="clearfix"><a href="#">
+                        <img src="../images/vs2.png" alt="">
+                        <div class="txt">
+                            <P>강원FC 엠블런 소개</P>
+                            <span>바로가기</span>
+                        </div>
+                    </a></li>
+                    <li><a href="#">
+                        <img src="../images/shopping_cart.png" alt="">
+                        <span>쇼핑몰</span>
+                    </a></li>
+                    <li><a href="#">
+                        <img src="../images/sim_card.png" alt="">
+                        <span>주주</span>
+                    </a></li>
+                    <li><a href="#">
+                        <img src="../images/public.png" alt="">
+                        <span>사회공헌</span>
+                    </a></li>
+                    <li><a href="#">
+                        <img src="../images/w.PNG" alt="">
+                        <div class="txt">
+                            <P>강원FC 마스코트 소개</P>
+                            <span>바로가기</span>
+                        </div>
+                    </a></li>
+                </ul>
+            </div>
            </a></li>
            <li><a href="#">
-               <div class="quick">
-                   <span>QUICK LINK</span>
-                   <ul class="quicktab">
-                       <li><a href="#">
-                           <img src="../images/money.png" alt="">
-                           <span>티켓</span>
-                       </a></li>
-                       <li><a href="#">
-                           <img src="../images/directions_bus.png" alt="">
-                           <span>버스</span>
-                       </a></li>
-                       <li><a href="#">
-                           <img src="../images/thumb_up.png" alt="">
-                           <span>스폰서</span>
-                       </a></li>
-                       <li><a href="#">
-                           <img src="../images/vs1.png" alt="">
-                       </a></li>
-                       <li><a href="#">
-                           <img src="../images/shopping_cart.png" alt="">
-                           <span>쇼핑몰</span>
-                       </a></li>
-                       <li><a href="#">
-                           <img src="../images/sim_card.png" alt="">
-                           <span>주주</span>
-                       </a></li>
-                       <li><a href="#">
-                           <img src="../images/public.png" alt="">
-                           <span>사회공헌</span>
-                       </a></li>
-                       <li><a href="#">
-                           <img src="../images/w.PNG" alt="">
-                       </a></li>
-                   </ul>
-               </div>
+              <div class="txt"><i>GREAT</i><br> <img src="../images/vs2.png" alt=""> <br><i>UNION</i></div>
            </a></li>
-           <li><a href="#">4</a></li>
-           <li><a href="#">5</a></li> 
+           <li><a href="#">
+               <div class="txt">
+                   GANGWON FC CSR
+               </div>
+               <div class="txt">
+                강웅이와 함께 으라차차
+            </div>
+            <span>MORE</span>
+           </a></li>
+           <li><a href="#">
+            <div class="txt">
+                GANGWON FC STOCK
+            </div>
+            <div class="txt">
+             강원FC 주주확인
+         </div>
+         <span>MORE</span>
+           </a></li> 
            <li><a href="#">6</a></li>
        </ul>
    </div>
