--- a/04company/d/04company/index.html
+++ b/04company/d/04company/index.html
@@ -166,10 +166,28 @@
          </div>
          <span>MORE</span>
            </a></li> 
-           <li><a href="#">6</a></li>
+           <li><a href="#">
+               <span>VIDEO CLIP</span>
+               <img src="../images/play.png" alt="">
+           </a></li>
        </ul>
    </div>
-   <div class="sponser"></div>
+   <div class="sponser">
+    <ul class="sponserWrap">
+        <li>
+            <img src="../images/slider1.png" alt="">
+            <span><img src="../images/gangwon_spon.png" alt=""></span>
+        </li>
+        <li>
+            <img src="../images/slider2.png" alt="">
+            <span><img src="../images/gangneung_spon.png" alt=""></span>
+        </li>
+        <li>
+            <img src="../images/slider3.png" alt="">
+            <span><img src="../images/chunchun_spon.png" alt=""></span>
+        </li>
+     </ul>
+   </div>
    <div class="feedContain"></div>
    <div class="noticeWrap"></div>
    <footer id="footer"></footer>
