--- a/04company/index.html
+++ b/04company/index.html
@@ -118,8 +118,7 @@
                      <li class="clearfix"><a href="#">
                          <img src="images/vs2.png" alt="">
                          <div class="txt">
-                             <P>강원FC 엠블런 소개</P>
-                             <span>바로가기</span>
+                             <P>엠블런</P>
                          </div>
                      </a></li>
                      <li><a href="#">
@@ -135,10 +134,9 @@
                          <span>사회공헌</span>
                      </a></li>
                      <li><a href="#">
-                         <img src="images/w.PNG" alt="">
+                         <img src="images/mascote.png" alt="">
                          <div class="txt">
-                             <P>강원FC 마스코트 소개</P>
-                             <span>바로가기</span>
+                             <P>마스코트</P>
                          </div>
                      </a></li>
                  </ul>
@@ -148,18 +146,14 @@
                <div class="txt"><i>GREAT</i><br> <img src="images/vs2.png" alt=""> <br><i>UNION</i></div>
             </a></li>
             <li><a href="#">
-                <div class="txt">
-                    GANGWON FC CSR
-                </div>
-                <div class="txt">
+                    <h2>GANGWON FC CSR</h2>
+                <div class="txt1">
                  강웅이와 함께 으라차차
              </div>
              <span>MORE</span>
             </a></li>
             <li><a href="#">
-             <div class="txt">
-                 GANGWON FC STOCK
-             </div>
+                 <h2>GANGWON FC STOCK</h2>
              <div class="txt">
               강원FC 주주확인
           </div>
@@ -170,28 +164,28 @@
                 <img src="images/play.png" alt="">
             </a></li>
         </ul>
-        <div class="sponser">
-            <ul class="sponserWrap">
-                <li>
-                    <img src="images/slider1.png" alt="">
-                    <span><img src="images/gangwon_spon.png" alt=""></span>
-                </li>
-                <li>
-                    <img src="images/slider2.png" alt="">
-                    <span><img src="images/gangneung_spon.png" alt=""></span>
-                </li>
-                <li>
-                    <img src="images/slider3.png" alt="">
-                    <span><img src="images/chunchun_spon.png" alt=""></span>
-                </li>
-             </ul>
-           </div>
+        
         </div>
    </header> 
-
+   <div class="sponser">
+    <ul class="sponserWrap">
+        <li>
+            <img src="images/slider1.png" alt="">
+            <span><img src="images/gangwon_spon.png" alt=""></span>
+        </li>
+        <li>
+            <img src="images/slider2.png" alt="">
+            <span><img src="images/gangneung_spon.png" alt=""></span>
+        </li>
+        <li>
+            <img src="images/slider3.png" alt="">
+            <span><img src="images/chunchun_spon.png" alt=""></span>
+        </li>
+     </ul>
+   </div>
 
    <div class="fcSpon">
-
+       <span>GANGWON FC SPONSOR</span>
    </div>
    <div class="feedContain"></div>
    <div class="noticeWrap"></div>
