--- a/04company/index.html
+++ b/04company/index.html
@@ -105,11 +105,11 @@
                  <ul class="quicktab">
                      <li><a href="#">
                          <img src="images/money.png" alt="">
-                         <span>티켓</span>
+                         <span>티켓구매</span>
                      </a></li>
                      <li><a href="#">
                          <img src="images/directions_bus.png" alt="">
-                         <span>버스</span>
+                         <span>버스예약</span>
                      </a></li>
                      <li><a href="#">
                          <img src="images/thumb_up.png" alt="">
@@ -127,7 +127,7 @@
                      </a></li>
                      <li><a href="#">
                          <img src="images/sim_card.png" alt="">
-                         <span>주주</span>
+                         <span>주주확인</span>
                      </a></li>
                      <li><a href="#">
                          <img src="images/public.png" alt="">
@@ -144,7 +144,8 @@
             </a></li>
             <li><a href="#">
                <div class="txt"><i>GREAT</i><br> <img src="images/vs2.png" alt=""> <br><i>UNION</i></div>
-            </a></li>
+            </a>
+        </li>
             <li><a href="#">
                     <h2>GANGWON FC CSR</h2>
                 <div class="txt1">
@@ -159,10 +160,12 @@
           </div>
           <span>MORE</span>
             </a></li> 
-            <li><a href="#">
+            <li>
+                <a href="#">
                 <span>VIDEO CLIP</span>
                 <img src="images/play.png" alt="">
-            </a></li>
+               </a>
+            </li>
         </ul>
         
         </div>
