--- a/04company/index.html
+++ b/04company/index.html
@@ -188,7 +188,16 @@
    </div>
 
    <div class="fcSpon">
-       <span>GANGWON FC SPONSOR</span>
+       <h2>GANGWON FC SPONSOR</h2>
+       <h4>강원FC스폰서를 소개합니다.</h4>
+       <div class="sponImg clearfix">
+           <img src="images/gangwon.png" alt="">
+           <img src="images/chun.png" alt="">
+
+           <img src="images/gangneun.png" alt="">
+           <img src="images/resort.png" alt="">
+           <img src="images/yanggu.png" alt="">
+       </div>
    </div>
    <div class="feedContain"></div>
    <div class="noticeWrap"></div>
