--- a/04company/index.html
+++ b/04company/index.html
@@ -10,6 +10,9 @@
     <script src="js/script3.js"></script>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
    <header id="header">
@@ -199,7 +202,48 @@
            <img src="images/yanggu.png" alt="">
        </div>
    </div>
-   <div class="feedContain"></div>
+   <div class="feedContain">
+       <div class="feeds">
+           <h3>GANGWON FC FEEDS</h3><br>
+           <p>강원FC 소식을 확인하세요!</p>
+           <ul>
+               <li>
+                   <img src="" alt="">
+                   <span>전체</span>
+            </li>
+               <li>
+                   <img src="" alt="">
+                   <span>공지사항</span>
+                </li>
+               <li>
+                   <img src="" alt="">
+                   <span>뉴스</span>
+                </li>
+               <li>
+                   <img src="" alt="">
+                   <span>구단사진</span>
+                </li>
+               <li>
+                   <img src="" alt="">
+                   <span>페이스북</span>
+                </li>
+               <li>
+                   <img src="" alt="">
+                   <span>인스타그램</span>
+                </li>
+           </ul>
+       </div>
+       <div class="insta">
+           <ul>
+               <li><a href="#"><img src="images/Rectangle 23.png" alt=""></a></li>
+               <li><a href="#"><img src="images/Rectangle 24.png" alt=""></a></li>
+               <li><a href="#"><img src="images/Rectangle 26.png" alt=""></a></li>
+               <li><a href="#"><img src="images/Rectangle 27.png" alt=""></a></li>
+               <li><a href="#"><img src="images/Rectangle 28.png" alt=""></a></li>
+               <li><a href="#"><img src="images/Rectangle 30.png" alt=""></a></li>
+           </ul>
+       </div>
+   </div>
    <div class="noticeWrap"></div>
    <footer id="footer"></footer>
 </body>
