--- a/04company/index.html
+++ b/04company/index.html
@@ -208,39 +208,68 @@
            <p>강원FC 소식을 확인하세요!</p>
            <ul>
                <li>
-                   <img src="" alt="">
+                   <img src="images/a 1.png" alt="">
                    <span>전체</span>
             </li>
                <li>
-                   <img src="" alt="">
+                   <img src="images/bd 1.png" alt="">
                    <span>공지사항</span>
                 </li>
                <li>
-                   <img src="" alt="">
+                   <img src="images/b 1.png" alt="">
                    <span>뉴스</span>
                 </li>
                <li>
-                   <img src="" alt="">
+                   <img src="images/g 1.png" alt="">
                    <span>구단사진</span>
                 </li>
                <li>
-                   <img src="" alt="">
+                   <img src="images/facebook 2.png" alt="">
                    <span>페이스북</span>
                 </li>
                <li>
-                   <img src="" alt="">
+                   <img src="images/youtube 8.png" alt="">
                    <span>인스타그램</span>
                 </li>
            </ul>
        </div>
        <div class="insta">
            <ul>
-               <li><a href="#"><img src="images/Rectangle 23.png" alt=""></a></li>
-               <li><a href="#"><img src="images/Rectangle 24.png" alt=""></a></li>
-               <li><a href="#"><img src="images/Rectangle 26.png" alt=""></a></li>
-               <li><a href="#"><img src="images/Rectangle 27.png" alt=""></a></li>
-               <li><a href="#"><img src="images/Rectangle 28.png" alt=""></a></li>
-               <li><a href="#"><img src="images/Rectangle 30.png" alt=""></a></li>
+               <li>
+                   <a href="#">
+                       <img src="images/Rectangle 23.png" alt="">
+                       <p>.이렇게 훈련이 재미있던 거였나?<br>당연함😝 매번 오던 곳도 설레게 만든... <br>#인스타그램</p>
+            </a>
+        </li>
+               <li>
+                   <a href="#">
+                       <img src="images/Rectangle 24.png" alt="">
+                       <p>런닝하다 붙잡힌 골키퍼 완전체 ♀ #강원FC #골키퍼즈 #이범수 #권재범... <br>#인스타그램</p>
+                    </a></li>
+               <li>
+                   <a href="#">
+                       <img src="images/Rectangle 26.png" alt="">
+                       .9월 7일 푸른 하늘의 날은<br>우리나라의 제안으로 지정된 최초의 UN... <br>#인스타그램
+                    </a>
+                </li>
+               <li>
+                   <a href="#">
+                       <img src="images/Rectangle 27.png" alt="">
+                       <p>#HBD_강원 오늘은 고무열 선수의 생일입니다🎉 (무)열의 날 (열)렬히... <br>#인스타그램</p>
+                    </a>
+                </li>
+               <li>
+                   <a href="#">
+                       <img src="images/Rectangle 28.png" alt="">
+                       <p>.일동후디스 하이뮨과 함께하는 랜선 팬사인회✍🎊9/8(수) 김동현... <br>#인스타그램</p>
+                    </a>
+                    </li>
+               <li>
+                   <a href="#">
+                       <img src="images/Rectangle 30.png" alt="">
+                       .📢 #강원FC K리그 주니어 경기 결과 <br>🐣강원FC U15 3:1 FC... <br>#인스타그램
+                    </a>
+                </li>
            </ul>
        </div>
    </div>
