--- a/04company/index.html
+++ b/04company/index.html
@@ -249,7 +249,7 @@
                <li>
                    <a href="#">
                        <img src="images/Rectangle 26.png" alt="">
-                       .9월 7일 푸른 하늘의 날은<br>우리나라의 제안으로 지정된 최초의 UN... <br>#인스타그램
+                       <p>.9월 7일 푸른 하늘의 날은<br>우리나라의 제안으로 지정된 최초의 UN... <br>#인스타그램</p>
                     </a>
                 </li>
                <li>
@@ -267,13 +267,16 @@
                <li>
                    <a href="#">
                        <img src="images/Rectangle 30.png" alt="">
-                       .📢 #강원FC K리그 주니어 경기 결과 <br>🐣강원FC U15 3:1 FC... <br>#인스타그램
+                       <p>.📢 #강원FC K리그 주니어 경기 결과 <br>🐣강원FC U15 3:1 FC... <br>#인스타그램</p>
                     </a>
                 </li>
            </ul>
        </div>
    </div>
-   <div class="noticeWrap"></div>
+   <div class="noticeWrap">
+       <h3>공지사항</h3>
+   </div>
+   
    <footer id="footer"></footer>
 </body>
 </html>
